# niri-groom

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
src/: badges.rs  config.rs  main.rs  niri.rs  theme.rs
