[package]
name = "niri-groom"
version = "0.1.0"
edition = "2021"
description = "A niri workspace/window survey & quick-kill overlay"

[dependencies]
gtk4 = "0.11"
gtk4-layer-shell = "0.8"
kdl = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "niri-groom"
path = "src/main.rs"
