[package]
name = "niri-groom"
version = "0.1.0"
edition = "2021"
description = "A fullscreen overlay for the niri compositor to survey and quick-kill workspaces and windows"
authors = ["Samuel Tribehou"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eltribehou/niri-groom"
keywords = ["niri", "wayland", "layer-shell", "gtk4", "overlay"]
categories = ["gui", "command-line-utilities"]

[dependencies]
async-channel = "2"
gtk4 = "0.11"
libc = "0.2"
gtk4-layer-shell = "0.8"
kdl = "6"
pangocairo = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "niri-groom"
path = "src/main.rs"
